# Baso-3d-Manager

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  test-polyfills.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  csv_export.rs  error.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: backup.rs  customers.rs  dashboard.rs  export.rs  filaments.rs  mod.rs  notifications.rs  orders.rs  printers.rs  quote_items.rs  settings.rs  stock_audit.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_orders_apply_vat.sql  003_stock_audit_log.sql  004_notifications.sql
src-tauri/src/repos/: customers.rs  filaments.rs  mod.rs  notifications.rs  orders.rs  printers.rs  quote_items.rs  settings.rs  stock_audit.rs
src-tauri/tests/: db_types_gen.rs  stock_audit_set_status.rs
src/hooks/: useCustomers.ts  useDashboard.ts  useDashboardAlerts.test.tsx  useDashboardAlerts.ts  useFilaments.ts  useNotifications.ts  useOrders.ts  usePrinters.ts  useSettings.ts  useStockAudit.ts
src/lib/: calc.test.ts  calc.ts  customer-schema.test.ts  customer-schema.ts  dashboard-types.ts  db-types.generated.ts  db-types.ts  filament-schema.test.ts  filament-schema.ts  ipc-contract.test.ts  ipc.ts  order-schema.test.ts  order-schema.ts  printer-schema.test.ts  printer-schema.ts  quote-format.test.ts  (+3 more)
(+59 files in other folders)
